--- a/Bejeweled/res/layout/activity_main.xml
+++ b/Bejeweled/res/layout/activity_main.xml
@@ -6,8 +6,22 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:id="@+id/mainLayout"
     tools:context=".MainActivity" >
 
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/hello_world" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView1"
+        android:layout_marginLeft="48dp"
+        android:layout_marginTop="76dp"
+        android:layout_toRightOf="@+id/textView1"
+        android:text="Button" />
 
 </RelativeLayout>
