--- a/Bejeweled/res/layout/activity_game_score.xml
+++ b/Bejeweled/res/layout/activity_game_score.xml
@@ -3,4 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
+    <include layout="@layout/score_category_speed"/>
+    <include layout="@layout/score_category_tactic"/>
 </android.support.v4.view.ViewPager>
