--- a/Bejeweled/res/layout/activity_game_mode.xml
+++ b/Bejeweled/res/layout/activity_game_mode.xml
@@ -5,44 +5,90 @@
     android:background="@drawable/background"
     android:gravity="center"
     android:orientation="vertical" >
-    
-    <FrameLayout 
-        
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-	    android:layout_weight="1" >
-	    
-	    <ImageView
-	        android:id="@+id/imageSelection"
-	        android:layout_width="match_parent"
-	        android:layout_height="match_parent"
-	        android:paddingTop="10dp"
-	        android:layout_marginBottom="-10dp"
-	        android:background="@drawable/background_interface"
-	        android:adjustViewBounds="true" />
-	    
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1" >
+
+        <ImageView
+            android:id="@+id/imageSelection"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="-10dp"
+            android:adjustViewBounds="true"
+            android:background="@drawable/background_interface"
+            android:paddingTop="10dp" />
+
+        <TextView
+            android:id="@+id/textViewSpeedScore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="80dp"
+            android:text=""
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <TextView
+            android:id="@+id/textViewScoreTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="50dp"
+            android:text=""
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <TextView
+            android:id="@+id/textViewPseudo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:text=""
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <TextView
+            android:id="@+id/textViewTacticScore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="110dp"
+            android:text=""
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <TextView
+            android:id="@+id/textViewSelectGameMode"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="40dp"
+            android:text=""
+            android:textAppearance="?android:attr/textAppearanceLarge" />
     </FrameLayout>
 
-	<TextView style="@style/divider" />
-	<TextView style="@style/divider" />
-	
-	<ImageView
-		android:id="@+id/boutonMode_vitesse"
-		style="@style/boutonMenu"
-		android:background="@drawable/bouton_mode_vitesse" />
-	
-	<TextView style="@style/divider" />
-	
-	<ImageView
-		android:id="@+id/boutonMode_score"
-		style="@style/boutonMenu"
-		android:background="@drawable/bouton_mode_tactique" />
-	
-	<TextView style="@style/divider" />
-	
-	<ImageView
-		android:id="@+id/boutonMode_retour"
-		style="@style/boutonMenu"
-		android:background="@drawable/bouton_retour" />
+    <TextView style="@style/divider" />
+
+    <TextView style="@style/divider" />
+
+    <ImageView
+        android:id="@+id/boutonMode_vitesse"
+        style="@style/boutonMenu"
+        android:background="@drawable/bouton_mode_vitesse" />
+
+    <TextView style="@style/divider" />
+
+    <ImageView
+        android:id="@+id/boutonMode_score"
+        style="@style/boutonMenu"
+        android:background="@drawable/bouton_mode_tactique" />
+
+    <TextView style="@style/divider" />
+
+    <ImageView
+        android:id="@+id/boutonMode_retour"
+        style="@style/boutonMenu"
+        android:background="@drawable/bouton_retour" />
 
 </LinearLayout>
