Ajout du service pour la gestion du song. Étape 1 => contient quelques logs.

--- a/Bejeweled/res/layout/activity_game_mode.xml
+++ b/Bejeweled/res/layout/activity_game_mode.xml
@@ -80,7 +80,7 @@
     <TextView style="@style/divider" />
 
     <ImageView
-        android:id="@+id/boutonMode_score"
+        android:id="@+id/boutonMode_tactic"
         style="@style/boutonMenu"
         android:background="@drawable/bouton_mode_tactique" />
 
