--- a/Bejeweled/res/layout/activity_game.xml
+++ b/Bejeweled/res/layout/activity_game.xml
@@ -9,14 +9,13 @@
     tools:context=".GameActivity" >
 
     <GridView
-        android:id="@+id/gridView1"
+        android:id="@+id/gridViewItems"
         android:layout_width="fill_parent"
-        android:layout_height="300dp"
+        android:layout_height="500dp"
         android:layout_centerInParent="true"
-        android:columnWidth="30dp"
-        android:numColumns="auto_fit"
+        android:columnWidth="250dp"
+        android:numColumns="8"
         android:stretchMode="columnWidth" >
-
     </GridView>
 
 </RelativeLayout>
