- Arrangement de la taille dynamique des items - Arrangement de l'initialisation aléatoire - Mise a jour de style.xml - Ajout des drawables de l'interface

--- a/Bejeweled/res/layout/activity_game.xml
+++ b/Bejeweled/res/layout/activity_game.xml
@@ -7,137 +7,136 @@
     android:gravity="center"
     tools:context=".GameActivity" >
 	
-    <LinearLayout 
-        
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-        android:background="@drawable/background_score"
-        android:orientation="vertical"
-    	android:gravity="center_horizontal"
-        android:layout_weight="8"
-        >
-
-        <LinearLayout
-            android:id="@+id/Game_grpPoints"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="2.1"
-            android:gravity="center"
-            android:orientation="horizontal" >
-
-            <TextView
-                android:id="@+id/Game_points"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="+100"
-                android:textColor="@color/txt_points" />
-
-            <TextView
-                android:id="@+id/Game_bonus"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="+50"
-                android:textColor="@color/txt_bonus" />
-        </LinearLayout>
-
-        <TextView 
-            android:id="@+id/Game_score"
-            android:layout_below="@+id/Game_grpPoints"
-            android:layout_width="wrap_content"
-	    	android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:text="1500"
-            android:textColor="@color/txt_score" />
-        
-    </LinearLayout>
-    <RelativeLayout 
-        
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-	    android:gravity="center_vertical"
-        android:layout_weight="8.5"
-        >
-        
-        <TextView 
-	        android:id="@+id/Game_txtchrono"
-	        android:layout_width="wrap_content"
-	 		android:layout_height="wrap_content"
-	 		android:layout_alignParentLeft="true"
-	        android:text="Chrono: "
-	        android:textColor="@color/txt_chaines" />
-	    
-
-	    <Chronometer
-	        android:id="@+id/Game_chrono"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	 		android:layout_toRightOf="@+id/Game_txtchrono"
-	        android:text="Chronometer" />   
-	    
-	    <TextView 
-	        android:id="@+id/Game_nbrChaines"
-	        android:layout_width="wrap_content"
-	 		android:layout_height="wrap_content"
-	 		android:layout_alignParentRight="true"
-	        android:text="Chaines:XXX"
-	        android:textColor="@color/txt_chaines" />
-
-	    <ProgressBar
-	        android:id="@+id/progressBar"
-	        style="?android:attr/progressBarStyleHorizontal"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignParentTop="true"
-	        android:layout_centerHorizontal="true" />
-        
-    </RelativeLayout>
-        
-    <GridView
-        android:id="@+id/gridViewItems"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:numColumns="8"
-        android:stretchMode="columnWidth"
-        android:background="@color/black_shadow_light"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_weight="4" >
-        <!--  android:layout_height="500dp"
-        
-        android:layout_centerInParent="true"
-        android:columnWidth="250dp"
-        -->
-    </GridView>
-	<RelativeLayout 
+    <LinearLayout
+		    android:layout_width="match_parent"
+		    android:layout_height="match_parent"
+	        android:background="@drawable/background_border"
+	        android:orientation="vertical"
+	        android:layout_weight="8" >
+	    <LinearLayout 
+		    android:layout_width="match_parent"
+		    android:layout_height="match_parent"
+	        android:background="@drawable/background_score"
+	        android:orientation="vertical"
+	    	android:gravity="center_horizontal"
+	        android:layout_weight="8"
+	        >
+	
+	        <LinearLayout
+	            android:id="@+id/Game_grpPoints"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="2.1"
+	            android:gravity="center"
+	            android:orientation="horizontal" >
+	
+	            <TextView
+	                android:id="@+id/Game_points"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:text="+100"
+	            	android:textSize="15sp"
+	                android:textColor="@color/txt_points" />
+	
+	            <TextView
+	                android:id="@+id/Game_bonus"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:text="+50"
+	           		android:textSize="11sp"
+	                android:textColor="@color/txt_bonus" />
+	        </LinearLayout>
+	
+	        <TextView 
+	            android:id="@+id/Game_score"
+	            android:layout_below="@+id/Game_grpPoints"
+	            android:layout_width="wrap_content"
+		    	android:layout_height="wrap_content"
+	            android:layout_weight="2"
+	            android:text="1500"
+	            android:textSize="35sp"
+	            android:textColor="@color/txt_score" />
+	        
+	    </LinearLayout>
+		<TextView style="@style/divider" />
+		<TextView style="@style/divider" />
+		<TextView style="@style/divider" />
+	    <RelativeLayout 
 	        
 		    android:layout_width="match_parent"
 		    android:layout_height="match_parent"
-	        android:background="@color/black_shadow"
-	    	android:gravity="center"
+		    android:gravity="center_vertical"
 	        android:layout_weight="8.5"
+	        android:background="@drawable/background_interface"
 	        >
-	    
+	        
+		    <TextView 
+		        android:id="@+id/Game_nbrChaines"
+		        android:layout_width="wrap_content"
+		 		android:layout_height="wrap_content"
+		 		android:layout_alignParentLeft="true"
+		        android:text="Chaines:XXX"
+		        style="@style/textSizeJeu"
+		        android:textColor="@color/txt_chaines" />
+	        
 		    <TextView 
 		        android:id="@+id/Game_coupsRestants"
 		        android:layout_width="wrap_content"
 		 		android:layout_height="wrap_content"
+		 		android:layout_alignParentLeft="true"
+		 		android:layout_below="@+id/Game_nbrChaines"
 		        android:text="Coups Restants: "
+		        style="@style/textSizeJeu"
 		        android:textColor="@color/white" />
 		    <TextView 
 		        android:id="@+id/Game_nbrCoupsRestants"
 		        android:layout_width="wrap_content"
 		 		android:layout_height="wrap_content"
 		 		android:layout_toRightOf="@+id/Game_coupsRestants"
+		 		android:layout_below="@+id/Game_nbrChaines"
 		        android:text="XXX"
+		        style="@style/textSizeJeu"
 		        android:textColor="@color/txt_nbrRestant" />
-        
-    </RelativeLayout>
+		    
+	        <TextView 
+		        android:id="@+id/Game_txtchrono"
+		        android:layout_width="wrap_content"
+		 		android:layout_height="wrap_content"
+		 		android:layout_toLeftOf="@+id/Game_chrono"
+		        android:text="Chrono: "
+		        style="@style/textSizeJeu"
+		        android:textColor="@color/white" />
+		    
+	
+		    <Chronometer
+		        android:id="@+id/Game_chrono"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		 		android:layout_alignParentRight="true"
+				style="@style/textSizeJeu"
+		        android:text="Chronometer" />   
+	        
+	    </RelativeLayout>
+    
+    </LinearLayout>
+	<TextView style="@style/divider" />
+    <GridView
+        android:id="@+id/gridViewItems"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:numColumns="8"
+        android:stretchMode="columnWidth"
+        android:background="@drawable/background_grid"
+        android:layout_weight="4" />
+    
+	<TextView style="@style/divider" />
+	<TextView style="@style/divider" />
 	<LinearLayout 
 	        
 		    android:layout_width="match_parent"
 		    android:layout_height="match_parent"
 	    	android:orientation="horizontal"
-	        android:layout_weight="7.9"
+	        android:layout_weight="8.7"
 	        >
 	    
 		    <ImageView 
