--- a/Bejeweled/res/values/styles.xml
+++ b/Bejeweled/res/values/styles.xml
@@ -42,5 +42,8 @@
         <item name="android:layout_height">1dp</item>
         <item name="android:background">@color/black</item>
     </style>
+    <style name="textSizeJeu">
+        <item name="android:textSize">35sp</item>
+    </style>
     
 </resources>
