--- a/Bejeweled/res/layout/activity_game.xml
+++ b/Bejeweled/res/layout/activity_game.xml
@@ -69,13 +69,20 @@
 	        android:layout_weight="8.5"
 	        android:background="@drawable/background_interface"
 	        >
-	        
+	        <TextView 
+		        android:id="@+id/Game_chaines"
+		        android:layout_width="wrap_content"
+		 		android:layout_height="wrap_content"
+		 		android:layout_alignParentLeft="true"
+		        android:text="Chaines: "
+		        style="@style/textSizeJeu"
+		        android:textColor="@color/txt_chaines" />
 		    <TextView 
 		        android:id="@+id/Game_nbrChaines"
 		        android:layout_width="wrap_content"
 		 		android:layout_height="wrap_content"
-		 		android:layout_alignParentLeft="true"
-		        android:text="Chaines:XXX"
+		 		android:layout_toRightOf="@+id/Game_chaines"
+		        android:text="XXX"
 		        style="@style/textSizeJeu"
 		        android:textColor="@color/txt_chaines" />
 	        
@@ -136,7 +143,7 @@
 		    android:layout_width="match_parent"
 		    android:layout_height="match_parent"
 	    	android:orientation="horizontal"
-	        android:layout_weight="8.7"
+	        android:layout_weight="9"
 	        >
 	    
 		    <ImageView 
