--- a/Bejeweled/res/layout/activity_game.xml
+++ b/Bejeweled/res/layout/activity_game.xml
@@ -53,8 +53,7 @@
 	            android:layout_width="wrap_content"
 		    	android:layout_height="wrap_content"
 	            android:layout_weight="2"
-	            android:text="1500"
-	            android:textSize="35sp"
+			    style="@style/numberSizeJeu"
 	            android:textColor="@color/txt_score" />
 	        
 	    </LinearLayout>
@@ -65,63 +64,81 @@
 	        
 		    android:layout_width="match_parent"
 		    android:layout_height="match_parent"
-		    android:gravity="center_vertical"
+		    android:gravity="center_horizontal"
 	        android:layout_weight="8.5"
 	        android:background="@drawable/background_interface"
 	        >
-	        <TextView 
-		        android:id="@+id/Game_chaines"
-		        android:layout_width="wrap_content"
-		 		android:layout_height="wrap_content"
-		 		android:layout_alignParentLeft="true"
-		        android:text="Chaines: "
-		        style="@style/textSizeJeu"
-		        android:textColor="@color/txt_chaines" />
-		    <TextView 
-		        android:id="@+id/Game_nbrChaines"
-		        android:layout_width="wrap_content"
-		 		android:layout_height="wrap_content"
-		 		android:layout_toRightOf="@+id/Game_chaines"
-		        android:text="XXX"
-		        style="@style/textSizeJeu"
-		        android:textColor="@color/txt_chaines" />
-	        
-		    <TextView 
-		        android:id="@+id/Game_coupsRestants"
-		        android:layout_width="wrap_content"
-		 		android:layout_height="wrap_content"
-		 		android:layout_alignParentLeft="true"
-		 		android:layout_below="@+id/Game_nbrChaines"
-		        android:text="Coups Restants: "
-		        style="@style/textSizeJeu"
-		        android:textColor="@color/white" />
-		    <TextView 
-		        android:id="@+id/Game_nbrCoupsRestants"
-		        android:layout_width="wrap_content"
-		 		android:layout_height="wrap_content"
-		 		android:layout_toRightOf="@+id/Game_coupsRestants"
-		 		android:layout_below="@+id/Game_nbrChaines"
-		        android:text="XXX"
-		        style="@style/textSizeJeu"
-		        android:textColor="@color/txt_nbrRestant" />
-		    
-	        <TextView 
-		        android:id="@+id/Game_txtchrono"
-		        android:layout_width="wrap_content"
-		 		android:layout_height="wrap_content"
-		 		android:layout_toLeftOf="@+id/Game_chrono"
-		        android:text="Chrono: "
-		        style="@style/textSizeJeu"
-		        android:textColor="@color/white" />
-		    
-	
-		    <Chronometer
-		        android:id="@+id/Game_chrono"
+	        <LinearLayout
+		        android:id="@+id/Game_grpModeInfo"
 		        android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
-		 		android:layout_alignParentRight="true"
-				style="@style/textSizeJeu"
-		        android:text="Chronometer" />   
+		        android:layout_marginTop="10dp"
+		 		android:layout_alignParentTop="true"
+		 		android:layout_centerHorizontal="true" >
+	            <LinearLayout
+		            android:id="@+id/Game_grpChrono"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+				 	android:orientation="vertical"
+				 	android:gravity="center_horizontal" >
+				    <TextView 
+				        android:id="@+id/Game_txtChrono"
+				        android:layout_width="wrap_content"
+				 		android:layout_height="wrap_content"
+			        	android:text="@string/txt_timer"
+			        	style="@style/textSizeJeu" />
+				    <Chronometer
+				        android:id="@+id/Game_chrono"
+				        android:layout_width="wrap_content"
+				        android:layout_height="wrap_content"
+				        style="@style/numberSizeJeu"/>   
+			    </LinearLayout>  
+			 		
+		        <LinearLayout
+		            android:id="@+id/Game_grpCoupsRestants"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+				 	android:orientation="vertical"
+				 	android:gravity="center_horizontal" >
+				    <TextView 
+				        android:id="@+id/Game_coupsRestants"
+				        android:layout_width="wrap_content"
+				 		android:layout_height="wrap_content"
+			        	android:text="@string/txt_coupsRestants"
+			        	style="@style/textSizeJeu" />
+				    
+				    <TextView 
+				        android:id="@+id/Game_nbrCoupsRestants"
+				        android:layout_width="wrap_content"
+				 		android:layout_height="wrap_content"
+			        	style="@style/numberSizeJeu" />
+			    </LinearLayout>  
+			</LinearLayout>  
+		    <LinearLayout
+	            android:id="@+id/Game_grpChaines"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+			 	android:layout_alignParentBottom="true"
+			 	android:layout_marginBottom="10dp"
+			 	android:orientation="horizontal"
+			 	android:layout_centerHorizontal="true" >
+		        <TextView 
+			        android:id="@+id/Game_chaines"
+			        android:layout_width="wrap_content"
+			 		android:layout_height="wrap_content"
+			        android:text="@string/txt_chaines"
+			        style="@style/textSizeJeu"
+			        android:textColor="@color/txt_chaines" />
+			    <TextView 
+			        android:id="@+id/Game_nbrChaines"
+			        android:layout_width="wrap_content"
+			 		android:layout_height="wrap_content"
+			        android:text="XXX"
+			        style="@style/textSizeJeu"
+			        android:textColor="@color/txt_chaines" />
+		    </LinearLayout>   
+		    
+	
 	        
 	    </RelativeLayout>
     
@@ -139,7 +156,7 @@
 	<TextView style="@style/divider" />
 	<TextView style="@style/divider" />
 	<LinearLayout 
-	        
+	        android:id="@+id/Game_buttons"
 		    android:layout_width="match_parent"
 		    android:layout_height="match_parent"
 	    	android:orientation="horizontal"
